creamos el cambiar de fondo a negro

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--link de font awesome-->
+  <script src="https://kit.fontawesome.com/297d5fdf65.js" crossorigin="anonymous"></script>
+  <!--linkeamos styles generales-->
+  <link rel="stylesheet" href="/primer-proyecto24-rama-AB/src/styles.css">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
