configuracion del css

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <!--linkeamos styles generales-->
   <link rel="stylesheet" href="/primer-proyecto24-rama-AB/src/styles.css">
 </head>
-<body class="mat-typography">
+<body class="mat-typography" style="background-color: blue;">
   <app-root></app-root>
 </body>
 </html>
