--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,13 @@
   <!--link de font awesome-->
   <script src="https://kit.fontawesome.com/297d5fdf65.js" crossorigin="anonymous"></script>
   <!--linkeamos styles generales-->
+  <!--otro estilo-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/primer-proyecto24-rama-AB/src/styles.css">
 </head>
-<body class="mat-typography" style="background-color: blue;">
+<body class="mat-typography" >
   <app-root></app-root>
 </body>
 </html>
