no se subieron los cambios que hice

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
   <!--link de font awesome-->
   <script src="https://kit.fontawesome.com/297d5fdf65.js" crossorigin="anonymous"></script>
   <!--linkeamos styles generales-->
+  <!--linkeamos un estilo mas-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <!--otro estilo-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
