arreglo de titulo y letras

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,10 @@
   <link rel="stylesheet" href="/primer-proyecto24-rama-AB/src/styles.css">
 
   <!--estilo del titulo-->
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Ga+Maamli&family=Sixtyfour+Convergence&display=swap');
-    </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Nabla&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
+
 </head>
 <body class="mat-typography" >
   <app-root></app-root>
