creamos una nueva base de datos porque la otra se rompio

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Nabla&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap" rel="stylesheet">
+
 </head>
 <body class="mat-typography" >
   <app-root></app-root>
